src/content/docs/sdk/unity/v4/features/device-info-ja.mdx
---
title: デバイス情報の取得
description: これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。
slug: ja/sdk/unity/v4/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /ja/sdk/unity/features/device-info
---

Adjust SDKには、デバイス情報を返すヘルパーメソッドが含まれています。これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。

## AdjustのデバイスID {#adjust-device-identifier}

```cs
public static string getAdid();
```

Adjustは各デバイスに固有のAdjust Device ID（ADID）を生成します。`getAdid`メソッドを呼び出すと、このIDを`string`として返します。

```cs
string adid = Adjust.getAdid();
```

## 広告ID {#id-for-advertisers}

<CodeBlock title="メソッドシグネチャー">

```cs
public static string getIdfa();
```

</CodeBlock>

ID for Advertisers（IDFA）は、Appleデバイスの端末固有の識別子です。`getIdfa`メソッドを呼び出すと、このIDを`string`として返します。

```cs
string idfa = Adjust.getIdfa();
```

## Google Play開発者サービス広告ID {#google-play-services-advertising-id}

<CodeBlock title="メソッドシグネチャー">

```cs
public static void getGoogleAdId(Action<string> onDeviceIdsRead);
```

</CodeBlock>

Google Play 開発者サービス ID（GPS ADID）は、Androidデバイスのデバイス固有の識別子です。

ユーザーは、端末の設定「広告のパーソナライズをオプトアウトする」を切り替えることで、GPS ADIDの共有を拒否できます。ユーザーがこの設定を有効にしている場合、Adjust SDKはGPS ADIDの値を「0」の文字列で返します。

この値にアクセスするには、バックグラウンドスレッドで`getGoogleAdId`メソッドを呼び出す必要があります。GPS ADID値にアクセスするには、デリゲート関数を割り当てます。

```cs
Adjust.getGoogleAdId((string googleAdId) => {
   //...
});
```

## Amazon 広告ID {#amazon-advertiser-id}

<CodeBlock title="メソッドシグネチャー">

```cs
public static string getAmazonAdId();
```

</CodeBlock>

Amazon Advertising ID（Amazon Ad ID）は、Android端末の端末固有の識別子です。`getAmazonAdId`メソッドを呼び出すと、このIDを`string`として返します。

```cs
string amazonAdId = Adjust.getAmazonAdId();
```
