src/content/docs/sdk/unity/v5/features/device-info-ja.mdx
---
title: デバイス情報の取得
description: これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。
slug: ja/sdk/unity/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ja/sdk/unity/v4/features/device-info
---

Adjust SDKには、デバイス情報を返すヘルパーメソッドが含まれています。これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。

## AdjustのデバイスID {#adjust-device-identifier}

```cs
public static void GetAdid(Action<string> callback)
```

Adjustは各デバイスに固有のAdjust Device ID（ADID）を生成します。コールバック関数で`Adjust.GetAdid`メソッドを呼び出すと、デバイスのADIDを返すことができます。SDKは情報を非同期で取得し、完了ハンドラーにパスします。

```cs
Adjust.GetAdid(adid =>
{
    // Your callback function
});
```

## 広告ID {#id-for-advertisers}

<CodeBlock title="メソッドシグネチャー">

```cs
public static void GetIdfa(Action<string> callback)
```

</CodeBlock>

ID for Advertisers（IDFA）は、Appleデバイス端末の固有の識別子です。コールバック関数で`Adjust.GetIdfa`メソッドを呼び出すと、デバイスのIDFAを返すことができます。SDKは情報を非同期で取得し、完了ハンドラーにパスします。

```cs
Adjust.GetIdfa(idfa =>
{
   // Your callback function
});
```

## ベンダーID {#id-for-vendor}

<CodeBlock title="メソッドシグネチャー">

```cs
public static void GetIdfv(Action<string> callback)
```

</CodeBlock>

ID for Advertisers（IDFA）は、Appleデバイス端末の固有の識別子です。コールバック関数で`Adjust.GetIdfv`メソッドを呼び出すと、デバイスのIDFVを返すことができます。SDKは情報を非同期で取得し、完了ハンドラーにパスします。

```cs
Adjust.GetIdfv(idfv =>
{
    // Your callback function
});
```

## Google Play開発者サービス広告ID {#google-play-services-advertising-id}

<CodeBlock title="メソッドシグネチャー">

```cs
public static void GetGoogleAdId(Action<string> OnDeviceIdsRead)
```

</CodeBlock>

Google Play 開発者サービス ID（GPS ADID）は、Androidデバイスのデバイス固有の識別子です。

ユーザーは、端末の設定「広告のパーソナライズをオプトアウトする」を切り替えることで、GPS ADIDの共有を拒否できます。ユーザーがこの設定を有効にしている場合、Adjust SDKはGPS ADIDの値を「0」の文字列で返します。

この値にアクセスするには、バックグラウンドスレッドで`GetGoogleAdId`メソッドを呼び出す必要があります。GPS ADID値にアクセスするには、デリゲート関数を割り当てます。

```cs
Adjust.GetGoogleAdId(googleAdId => {
   // Your callback function
});
```

## Amazon 広告ID {#amazon-advertiser-id}

<CodeBlock title="メソッドシグネチャー">

```cs
public static void GetAmazonAdId(Action<string> onAmazonAdIdRead)
```

</CodeBlock>

Amazon Advertising ID（Amazon Ad ID）は、Android端末の端末固有の識別子です。コールバック関数で`GetAmazonAdId`メソッドを呼び出します。SDKは情報を非同期で取得し、完了ハンドラーにパスします。

```cs
Adjust.GetAmazonAdId(amazonAdId => {
   // Your callback function
});
```
